--- a/app.json
+++ b/app.json
@@ -1,32 +1,17 @@
 {
   "expo": {
-    "name": "mobile-asfault",
-    "slug": "mobile-asfault",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "name": "Asfault",
+    "icon": "./assets/images/favicon.png",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "slug": "asfault",
+    "android": {
+      "package": "com.ryatec.asfault",
+      "versionCode": 1
+    },
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/logo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "web": {
-      "favicon": "./assets/images/favicon.png"
+      "backgroundColor": "#000000"
     }
   }
 }
