--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/react": "^16.9.36",
+    "@types/react-native": "^0.62.13",
     "babel-preset-expo": "~8.1.0",
     "jest-expo": "~37.0.0"
   },
